# gameEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exercises.cpp  main.cpp
gameEngine/: .gitignore  CMakeLists.txt  glad.c
gameEngine/libraries/lib/: glfw3.lib
gameEngine/x64/Debug/: gameEngine.exe.recipe  gameEngine.ilk  vc143.idb
gameEngine/x64/Debug/gameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  gameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libraries/enginemath/: .gitignore  CMakeLists.txt  LICENSE  README.md
libraries/enginemath/cmake/: enginemathConfig.cmake.in
libraries/enginemath/examples/: basic.cpp
libraries/enginemath/include/: enginemath.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
libraries/enginemath/include/enginemath/: enginemath.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
libraries/enginemath/tests/: test_vectors.cpp
libraries/include/camera/: camera.cpp  camera.hpp
libraries/include/glad/: glad.h
libraries/include/mesh/: mesh.cpp  mesh.hpp  texture.hpp  vertex.h
libraries/include/model/: model.cpp  model.hpp
libraries/include/render/: render.cpp  render.hpp
libraries/include/shader/: shader.cpp  shader.hpp
libraries/include/texture/: texture.cpp  texture.hpp
notes/engineMathNotes/: Test.md
shaders/: basic.frag  basic.vert  lightNew.frag  lightNew.vert  lightSource.frag  lighting.frag  lighting.vert
